--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.9'
 services:
   tomcat:
     image: tomcat:9.0
+    env_file:
+      - .env
     ports:
       - '8090:8080'
     volumes:
