--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8082
-spring.datasource.url=jdbc:mysql://DESKTOP-0001.lan:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=konrad
-spring.datasource.password=password1234
+spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+server.port=${SERVER_PORT}
+#management.server.port=10000
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
