--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.password=${JDBC_PASSWORD}
 server.port=${SERVER_PORT}
 #management.server.port=10000
 
+trello.api.endpoint.prod=${TRELLO_API_ENDPOINT_PROD}
+trello.app.key=${TRELLO_APP_KEY}
+trello.app.token=${TRELLO_APP_TOKEN}
+trello.app.username=${TRELLO_USERNAME}
+
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
