--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,21 @@ spring.datasource.password=${JDBC_PASSWORD}
 server.port=${SERVER_PORT}
 #management.server.port=10000
 
+#Trello
 trello.api.endpoint.prod=${TRELLO_API_ENDPOINT_PROD}
 trello.app.key=${TRELLO_APP_KEY}
 trello.app.token=${TRELLO_APP_TOKEN}
 trello.app.username=${TRELLO_USERNAME}
 
+#MySql
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# EMAIL CONFIGURATION
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
