Trello mapper tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,7 +11,7 @@ trello.app.token=TRELLO_APP_TOKEN
 trello.app.username=TRELLO_USERNAME
 
 #MySql
-spring.jpa.database=mysql
+spring.jpa.database=h2
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
