--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Admin email
 admin.mail= ${ADMIN_MAIL}
+admin.name = ${ADMIN_NAME}
 
 #Actuator
 management.endpoints.web.exposure.include=*
