--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -25,6 +25,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Admin email
 admin.mail= test@test.com
+admin.name = testAdmin
 
 #Actuator
 management.endpoints.web.exposure.include=*
